polished up card styling

--- a/public/cards.html
+++ b/public/cards.html
@@ -20,7 +20,10 @@
             <a class="other" href="./profile.html">Profile</a>
         </nav>
     </header>
-    <main></main>
+    <div id="filter-main">
+        <form id="filter"></form>
+        <main></main>
+    </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./cards.js"></script>
