--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,13 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">
+        <a id="ayy" href="./index.html">
             <img id="logo" src="https://cdn-icons-png.flaticon.com/512/6963/6963703.png"/>
+            <h1>Credit Congregate</h1>
         </a>
         <nav>
-            <a href="./cards.html">All Cards</a>
-            <a href="./profile.html">Profile</a>
+            <a class="other" href="./cards.html">All Cards</a>
+            <a class="other" href="./profile.html">Profile</a>
         </nav>
     </header>
     <main>
