--- a/public/profile.html
+++ b/public/profile.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <header>
-        <a href="./index.html">
+        <a id="ayy" href="./index.html">
             <img id="logo" src="https://cdn-icons-png.flaticon.com/512/6963/6963703.png"/>
+            <h1>Credit Congregate</h1>
         </a>
         <nav>
             <a class="other" href="./cards.html">All Cards</a>
