--- a/public/profile.html
+++ b/public/profile.html
@@ -18,7 +18,7 @@
         </a>
         <nav>
             <a class="other" href="./cards.html">All Cards</a>
-            <a style="color: black;">Profile</a>
+            <a style="color: black; font-size: 20px;">Profile</a>
         </nav>
     </header>
     <main>
