got acquired cards displayed from db

--- a/public/profile.html
+++ b/public/profile.html
@@ -22,7 +22,15 @@
         </nav>
     </header>
     <main>
-        <h1>My Profile</h1>
+        <section id="prof-sec"></section>
+
+        <div id="have-want">
+            <h1>Acquired Cards</h1>
+            <section id="have"></section>
+
+            <h1>Cards I Want</h1>
+            <section id="want"></section>
+        </div>
     </main>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
