--- a/public/cards.html
+++ b/public/cards.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./pics/favicon.ico">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./cards.css">
     <title>All Cards</title>
@@ -13,7 +14,7 @@
 <body>
     <header>
         <a id="ayy" href="./index.html">
-            <img id="logo" src="https://cdn-icons-png.flaticon.com/512/6963/6963703.png"/>
+            <img id="logo" src="./pics/logo.png"/>
             <h1>Credit Congregate</h1>
         </a>
         <nav>
