finished add to have and want lists functionalities

--- a/public/profile.html
+++ b/public/profile.html
@@ -27,10 +27,10 @@
 
         <div id="have-want">
             <h1>Acquired Cards</h1>
-            <section id="have"></section>
+            <section id="have">You don't have any cards yet!</section>
 
             <h1>Cards I Want</h1>
-            <section id="want"></section>
+            <section id="want">You don't want any cards?!</section>
         </div>
     </main>
 
