--- a/public/cards.html
+++ b/public/cards.html
@@ -104,4 +104,5 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./cards.js"></script>
+</body>
 </html>
