finished edit profile info functionality

--- a/public/cards.html
+++ b/public/cards.html
@@ -49,13 +49,13 @@
                     <section class="inputs">
                         <form class="filter-form">
                             <label id="cards-bank_name-LIKE" for="by-bank">Bank</label>
-                            <input placeholder="Capitalization matters!" class="in" type="text" id="by-bank"/>
+                            <input placeholder="Search results are case-sensitive!" class="in" type="text" id="by-bank"/>
                             <input id="bank-sub" class="steez" type="submit"/>
                         </form>
                         
                         <form class="filter-form deluxe">
                             <label id="categories-tags-=" for="by-cat">Category</label>
-                            <input placeholder="Try grocery or transportation" class="in" type="text" id="by-cat"/>
+                            <input placeholder="Try grocery, transportation, dining, etc..." class="in" type="text" id="by-cat"/>
                             <input id="cat-sub" class="steez" type="submit"/>
                         </form>
 
