made some code more reusable

--- a/public/cards.html
+++ b/public/cards.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./cards.css">
     <title>All Cards</title>
+    <!--
+                   _ |\_
+                   \` ..\
+              __,.-" =__Y=
+            ."        )
+      _    /   ,    \/\_
+     ((____|    )_-\ \_-`
+     `-----'`-----` `--`
+    Macy was here
+-->
 </head>
 <body>
     <header>
