--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,19 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./home.css">
     <title>Credit Congregate</title>
+    <!--
+                   _ |\_
+                   \` ..\
+              __,.-" =__Y=
+            ."        )
+      _    /   ,    \/\_
+     ((____|    )_-\ \_-`
+     `-----'`-----` `--`
+    Macy was here
+-->
 </head>
 <body>
+
     <header>
         <a id="ayy" href="./index.html">
             <img id="logo" src="./pics/logo.png"/>
