made filter forms much more versatile

--- a/public/cards.html
+++ b/public/cards.html
@@ -64,7 +64,7 @@
                         </form>
                         
                         <form class="filter-form deluxe">
-                            <label id="categories-tags-=" for="by-cat">Category</label>
+                            <label id="categories-tags-LIKE" for="by-cat">Category</label>
                             <input placeholder="Try grocery, transportation, dining, etc..." class="in" type="text" id="by-cat"/>
                             <input id="cat-sub" class="steez" type="submit"/>
                         </form>
@@ -106,7 +106,7 @@
                     </section>
                 </div>
             </section>
-            <button class="wee">?</button>
+            <button class="wee">></button>
         </div>
 
         <main></main>
